manifests/apps/media/transmission/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
  labels:
    app: media-manager
    component: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: media-manager
      component: transmission
  template:
    metadata:
      labels:
        app: media-manager
        component: transmission
    spec:
      hostname: transmission
      containers:
      - image: linuxserver/transmission:4.1.3
        name: transmission
        ports:
        - containerPort: 9091
          name: webui
          protocol: TCP
        - containerPort: 51413
          name: torrent-tcp
          protocol: TCP
        - containerPort: 51413
          name: torrent-udp
          protocol: UDP
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /downloads
        - name: watch
          mountPath: /watch
      - image: jesec/flood:4.16.2
        name: flood
        command:
        - "flood"
        - "--trurl"
        - "http://localhost:9091/transmission/rpc"
        - "--truser"
        - "\"\""
        - "--trpass"
        - "\"\""
        - --auth
        - "none"
        ports:
        - containerPort: 3000
          name: flood-webui
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 128Mi
          limits:
            cpu: 50m
            memory: 256Mi
        volumeMounts:
        - name: config
          mountPath: /config
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: transmission-pvc
      - name: data
        nfs:
          server: 10.0.0.13
          path: /mnt/data/library/downloads
          readOnly: false
      - name: watch
        emptyDir: {}
      restartPolicy: Always
