manifests/apps/media/transmission/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-svc-tcp
  namespace: media
  labels:
    app: media-manager
    component: transmission
spec:
  selector:
    app: media-manager
    component: transmission
  ports:
  - port: 9091
    name: api
    protocol: TCP
  - port: 3000
    name: webui
    protocol: TCP
  - port: 51413
    name: torrent-tcp
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-svc-udp
  namespace: media
  labels:
    app: media-manager
    component: transmission
spec:
  selector:
    app: media-manager
    component: transmission
  ports:
  - port: 51413
    name: torrent-udp
    protocol: UDP
