manifests/apps/media/transmission/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - downloads.frias.app
      secretName: downloads-frias-app-tls
  rules:
    - host: downloads.frias.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-svc-tcp
                port:
                  number: 9091
